--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
     
     <footer>
-        
+        <a href="#">Esqueceu sua senha ?</a>
     </footer>
     <script src="assets/js/login.js"></script>
 </body>
